sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:18: error: not found: type int
def rBon(i:int):Boolean = {
           ^DutchFlagAlgo:27: error: not found: type int
def bBon(i:int):Boolean = {
           ^